--- a/package.json
+++ b/package.json
@@ -13,18 +13,18 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "firebase": "^10.8.0",
-    "express": "^4.19.2",
-    "cors": "^2.8.5",
-    "body-parser": "^1.20.2",
-    "node-cache": "^5.1.2",
-    "express-rate-limit": "^7.2.0",
     "axios": "^1.6.8",
+    "body-parser": "^1.20.2",
     "cheerio": "^1.0.0-rc.12",
+    "cors": "^2.8.5",
+    "dotenv": "^16.4.5",
+    "express": "^4.19.2",
+    "express-rate-limit": "^7.5.1",
+    "firebase": "^10.8.0",
+    "node-cache": "^5.1.2",
     "playwright": "^1.44.0",
-    "dotenv": "^16.4.5"
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.66",
